--- a/projeto-react-fv-master/package.json
+++ b/projeto-react-fv-master/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "cadastro",
+  "name": "favela-delivery-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "video-react": "^0.15.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,8 +38,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "typescript": "^4.6.2"
   }
 }
